# openai-scheduled-newsletter

./: .dockerignore  .env.test  .gitignore  Dockerfile  Makefile  README.md  generate_newsletters.py  logger.py  pyproject.toml  run_tests.sh
.github/workflows/: test.yml
k8s/: deployment.yaml  ingress.yaml  secrets.yaml  service.yaml  test-secrets.yaml
openai_scheduled_newsletter/: api.py  cron_job.py  generate_newsletters.py  logger.py  main.py  send_email.py
openai_scheduled_newsletter_api/: Dockerfile  pyproject.toml
openai_scheduled_newsletter_api/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  oauth2-proxy-service-ref.yaml  secret.yaml  service.yaml
openai_scheduled_newsletter_api/openai_scheduled_newsletter_api/: __init__.py  app.py  main.py
openai_scheduled_newsletter_api/tests/: conftest.py  test_app.py
openai_scheduled_newsletter_job/: Dockerfile  main.py  pyproject.toml  pytest.ini  ruff.toml
openai_scheduled_newsletter_job/k8s/: cronjob.yaml  serviceaccount.yaml
openai_scheduled_newsletter_job/openai_scheduled_newsletter/: __init__.py  main.py
openai_scheduled_newsletter_job/scripts/: run_newsletter.sh
openai_scheduled_newsletter_job/tests/: conftest.py  test_generate_newsletter.py  test_main.py  test_send_email.py
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  __main__.py.backup  acr.py  auth0_setup.py  cert_manager.py  config.py  docker_build.py  infrastructure.py  kubernetes_resources.py  letsencrypt-issuer.yaml  mysql.py  oauth2_proxy.py  pyproject.toml
scripts/: build-api.sh  build-job.sh  run_newsletter.sh
shared/: pyproject.toml
shared/openai_scheduled_newsletter/: __init__.py  generate_newsletters.py  logger.py  send_email.py
src/: generate_newsletters.py  logger.py  main.py  send_email.py
tests/: test_api.py  test_cron_job.py  test_generate_newsletter.py  test_main.py  test_send_email.py
