[project]
name = "openai-newsletter"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
pulumi = ">=3.0.0,<4.0.0"
pulumi-azure-native = ">=3.0.0,<4.0.0"
python = "^3.10"
pulumi-kubernetes = "^4.25.0"
pulumi-docker-build = "^0.0.15"
pulumi-azuread = "^6.8.0"
pulumi-auth0 = "^3.36.0"
