[tool.poetry]
name = "openai-scheduled-newsletter-shared"
version = "0.1.0"
description = "Shared library for OpenAI Scheduled Newsletter microservices"
authors = ["Mohit Bhole <mohitb.steam@gmail.com>"]
packages = [{include = "openai_scheduled_newsletter"}]

[tool.poetry.dependencies]
python = ">=3.10"
openai = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-watch = "^4.2.0"

[project]
name = "openai-scheduled-newsletter-shared"
version = "0.1.0"
description = "Shared library for OpenAI Scheduled Newsletter microservices"
authors = [{name = "Mohit Bhole", email = "mohitb.steam@gmail.com"}]
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
